--- a/pro/frontend/package.json
+++ b/pro/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://todoapp123-48ha.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
